Fix preferences menu button alignment

--- a/source/styles/header.css
+++ b/source/styles/header.css
@@ -27,4 +27,6 @@ header p {
 header .menu-wrapper {
   grid-row: 1 / span 2;
   grid-column: 2;
+  margin: 0;
+  justify-self: end;
 }
